<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatailActivity">

    <!--region Image and Button News-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_contdesc"
            android:scaleType="matrix"
            android:src="@drawable/img_news1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/iv_contdesc"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="@color/color_white" />

        <ImageView
            android:id="@+id/btn_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/iv_contdesc"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toStartOf="@+id/btn_share"
          app:layout_constraintTop_toTopOf="@id/btn_back"
            app:srcCompat="@drawable/ic_size"
            app:tint="@color/color_white" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/iv_contdesc"
          app:layout_constraintBottom_toBottomOf="@id/btn_size"
           app:layout_constraintEnd_toStartOf="@id/btn_star"
            app:layout_constraintTop_toTopOf="@id/btn_size"
            app:srcCompat="@drawable/ic_share"
            app:tint="@color/color_white" />


        <ImageView
            android:id="@+id/btn_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/iv_contdesc"
            app:layout_constraintBottom_toBottomOf="@id/btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_share"
            app:srcCompat="@drawable/ic_star2"
            app:tint="@color/color_white" />


        <ImageView
            android:id="@+id/btn_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/iv_contdesc"
            app:layout_constraintBottom_toBottomOf="@id/img_toolbar"
         app:layout_constraintStart_toStartOf="@id/img_toolbar"
            app:srcCompat="@drawable/ic_baseline_zoom_out_map_24"
            app:tint="@color/color_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--endregion-->

    <!--region Isi Berita-->
    <ScrollView
        android:id="@+id/scv_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="@id/lay_Header"
        app:layout_constraintTop_toBottomOf="@id/lay_Header"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_fotoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/fotodesc"/>

            <TextView
                android:id="@+id/txt_detiknews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/detiknews"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_fotoDesc"/>
            
            <TextView
                android:id="@+id/txt_TitleNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/judul_berita"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_detiknews"/>
            
            <View
                android:id="@+id/vw_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#B6B6B6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_TitleNews"/>
            
            <TextView
                android:id="@+id/txt_reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/arief_ikhsanudin"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vw_line"/>

            <TextView
                android:id="@+id/txt_PostTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_date"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_reporter"/>

            <TextView
                android:id="@+id/txt_kontenNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
               android:text="@string/loremsum"
                android:textColor="#000000"
                android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_PostTime"/>

            <TextView
                android:id="@+id/txt_BacaJuga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bacajugayanglain"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_kontenNews"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>